apps/seldon-stack/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seldon-stack
  namespace: seldon
spec:
  type: ClusterIP
  selector: { app: seldon-stack }
  ports:
    - port: 80
      targetPort: 80
