apps/seldon-stack/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seldon-stack
  namespace: seldon
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: seldon.gorlitzerpark.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seldon-stack
                port: { number: 80 }
